--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,14 +19,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pygbag
+          pip install pygame==2.5.2 pygbag==0.9.2
           
       - name: Build with Pygbag
         run: |
-          pygbag --build .
+          python -m pygbag --build --app-name="Orbital Pong" --title="Orbital Pong" --icon=asteroid.jpg .
           
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages
           folder: build/web
+          clean: true
