--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.11'
           
       - name: Install dependencies
         run: |
@@ -23,7 +23,7 @@ jobs:
           
       - name: Build with Pygbag
         run: |
-          python -m pygbag --app_name "Orbital Pong" --title "Orbital Pong" --icon asteroid.jpg --build .
+          python -m pygbag --build .
           
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
