--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pygame==2.5.2 pygbag==0.9.2
+          pip install certifi
+          
+      - name: Update certificates
+        run: |
+          python -m pip install --upgrade certifi
           
       - name: Build with Pygbag
+        env:
+          PYTHONHTTPSVERIFY: '0'
         run: |
           python -m pygbag --build .
           
